log
Thu 21 Mar 2024 02:54:22 PM UTC: 
 tests:  0|5
total_score: 0/70
c83c5d7
Thu 21 Mar 2024 08:25:30 PM UTC: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  0|0
75d47cc
Thu 21 Mar 2024 08:37:18 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|0
4c02329
Thu 21 Mar 2024 08:39:09 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:67:11: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   67 |      suma += elemento;
      |           ^~
cc1: all warnings being treated as errors
Compilation failed
f308def
Thu 21 Mar 2024 08:40:38 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|3
total_score: 20/70
d25daec
Thu 21 Mar 2024 09:57:01 PM UTC: 
 exercises.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  0|0
b85d1c5
Thu 21 Mar 2024 09:59:02 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
966e471
Thu 21 Mar 2024 09:59:40 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
b5bef69
Thu 21 Mar 2024 10:02:17 PM UTC: 
 exercises.c | 10 ----------
 1 file changed, 10 deletions(-)
 tests:  0|0
9a4b517
Thu 21 Mar 2024 10:08:02 PM UTC: 
 exercises.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  0|0
7e424ab
Thu 21 Mar 2024 10:09:01 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f4e2f5c
Thu 21 Mar 2024 10:16:12 PM UTC: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|0
   [info] Lista inicial: [8 7 14 12 4 18 1 18 19 11 1 6 9 14 12 18 6 9 17 4 8 16 13 11 1 10 16 18 14 8 15 2 7 9 14 11 ]
dcfe505
Thu 21 Mar 2024 10:16:52 PM UTC: 
 exercises.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  0|0
8dfb737
Thu 21 Mar 2024 10:22:19 PM UTC: 
 exercises.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  1|4
total_score: 10/70
50b18d3
Thu 21 Mar 2024 10:26:06 PM UTC: 
 exercises.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  3|2
total_score: 40/70
04e3bbb
Sat 23 Mar 2024 04:50:21 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  3|2
total_score: 40/70
4341b26
Sat 23 Mar 2024 05:04:46 PM UTC: 
 exercises.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
42eee09
Sat 23 Mar 2024 05:14:49 PM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
33f0126
Sat 23 Mar 2024 05:22:07 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  3|2
total_score: 40/70
b709e95
Sat 23 Mar 2024 05:22:52 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|1
total_score: 50/70
4ebf1b0
Sat 23 Mar 2024 05:48:46 PM UTC: 
 exercises.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  4|1
total_score: 50/70
0ac8c1d
Sat 23 Mar 2024 05:50:15 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|1
total_score: 50/70
d2eaaaa
Sat 23 Mar 2024 05:54:29 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|1
total_score: 50/70
467d9c2
Sat 23 Mar 2024 05:54:56 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  5|1
total_score: 50/70
547bb92
Sat 23 Mar 2024 05:56:00 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|1
total_score: 50/70
d427dd3
Sat 23 Mar 2024 07:14:13 PM UTC: 
 exercises.c | 17 +++++++++--------
 1 file changed, 9 insertions(+), 8 deletions(-)
 tests:  4|1
total_score: 50/70
22850e3
Sat 23 Mar 2024 07:19:21 PM UTC: 
 exercises.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:135:46: error: expected ‘)’ before ‘{’ token
  135 |     if ((apertura == '(' && cadena[i] != ')') {
      |        ~                                     ^~
      |                                              )
exercises.c:138:3: error: expected expression before ‘}’ token
  138 |   }
      |   ^
Compilation failed
7c1b510
Sat 23 Mar 2024 07:20:47 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
ccac6e1
